--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ __pycache__
 /notebooks/.ipynb_checkpoints/
 /export/
 /attic/
+tests/tmpdir/
 /epifor.egg-info/
 estimated_active.csv
 foretold_data.json
