Refactor directory structure, remove old code

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 /data/CSSE-COVID-19/
-/data/population-city/
-/.vscode/
-__pycache__
-/notebooks/.ipynb_checkpoints/
-/export/
-/attic/
-tests/tmpdir/
+/tests/tmpdir/
 /epifor.egg-info/
-estimated_active.csv
-foretold_data.json
+/out/
+
+.vscode
+__pycache__
+notebooks/.ipynb_checkpoints
+_attic/
+*.pyc
