--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,19 +11,17 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.7"
 pandas = "^1.0.1"
-pyarrow = "^0.16.0"
 requests = "^2.23.0"
 numpy = "^1.18.1"
-python-dateutil = "^2.8.1"
-unidecode = "^1.1.1"
 #google-cloud-firestore = "^1.6"
 h5py = "^2.10"
+unidecode = "^1.1.1"
+pyyaml = "^5.3.1"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
 isort = "^4.3.21"
-pylint = "^2.4.4"
-pytest = "^5.3.5"
+pytest = "^5.4.1"
 
 
 [build-system]
