--- a/.github/workflows/epifor.yml
+++ b/.github/workflows/epifor.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Black Code Formatter
       uses: lgeiger/black-action@v1.0.1
       with:
-        args: "src/ tests/ --check"
+        args: "**.py --check"
 
   tests:
     name: tests
