--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,11 @@ __pycache__
 notebooks/.ipynb_checkpoints
 _attic/
 *.pyc
+
+venv
+
+.idea/
+config-local.yaml
+data-staging-gleam.json
+definition-local.xml
+foretold_data.json
