--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ numpy = "^1.18.1"
 h5py = "^2.10"
 unidecode = "^1.1.1"
 pyyaml = "^5.3.1"
+plotly = "^4.5.4"
+jsonobject = "^0.9.9"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
