--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,11 @@ python = "^3.7"
 pandas = "^1.0.1"
 requests = "^2.23.0"
 numpy = "^1.18.1"
-#google-cloud-firestore = "^1.6"
 h5py = "^2.10"
 unidecode = "^1.1.1"
-pyyaml = "^5.3.1"
 plotly = "^4.5.4"
 jsonobject = "^0.9.9"
+"ruamel.yaml" = "^0.16.10"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
