Add simulation statistics (max infected, tot infected)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ unidecode = "^1.1.1"
 plotly = "^4.5.4"
 jsonobject = "^0.9.9"
 "ruamel.yaml" = "^0.16.10"
+scipy = "^1.4.1"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
