--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ plotly = "^4.5.4"
 jsonobject = "^0.9.9"
 "ruamel.yaml" = "^0.16.10"
 scipy = "^1.4.1"
+tqdm = "^4.43.0"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
